--- a/KT_Engine/KT_Engine.vcxproj.filters
+++ b/KT_Engine/KT_Engine.vcxproj.filters
@@ -47,6 +47,12 @@
     <ClInclude Include="VectorND.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="Dispacher.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="DispatcherFill.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Fichiers de ressources">
