--- a/KT_Engine/KT_Engine.vcxproj.filters
+++ b/KT_Engine/KT_Engine.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClInclude Include="DispatcherFill.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="SquareMatrix.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Fichiers de ressources">
