masssive Add ( a ne pas faire )

--- a/KT_Engine/KT_Engine.vcxproj
+++ b/KT_Engine/KT_Engine.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="Vec2.h" />
     <ClInclude Include="Vec3.h" />
     <ClInclude Include="VectorND.h" />
+    <ClInclude Include="Vertex.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
